# pulumi_tech_holiday

./: .checkov.yml  .gitignore  .pulumi-ignore  CI_CD_README.md  LICENSE  Makefile  Pulumi.yaml  QUICKSTART.md  README.md  STRETCH_GOALS.md  __main__.py  checks.txt  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
docs/: notes_made_during_tech_holiday.md
infrastructure/: __main__.py
infrastructure/app_layer/: api_gateway.py  app_layer.py  iam_policies.py  policy_config.py
infrastructure/bootstrap/: bootstrap.py
infrastructure/common/: __init__.py  apigateway.py  config.py  dynamoDB.py  dynamodb.py  iam.py  s3.py
policies/awsguard/: PulumiPolicy.yaml  index.js  package.json  policy-config.json
policies/python/: PulumiPolicy.yaml  __init__.py  __main__.py  policies.py
src/: __main__.py
src/app_layer/: app_layer.py  iam_policies.py  policy_config.py
src/common/: __init__.py  config.py  dynamoDB.py  iam.py  s3.py
src/lambda/: app.py
tests/: README.md  __init__.py  common.py  test_policy_pack.py  test_s3_logic.py
