[tool.poetry]
name = "pulumi-tech-holiday"
version = "0.1.0"
description = "Pulumi Tech Holiday Project"
authors = ["eddalmond"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pulumi = "^3.201.0"
pulumi-aws = "^7.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
